# W25Q64_INTERLOCK

./: .gitignore  CMakeLists.txt  README.md  SAVEMEM_PLAN.TXT  compile.sh
6502/ca65/: Makefile  ROM_MERGE_STEPS.TXT
6502/ca65/MAN/: basic.man  basicw.man  bench.man  calc.man  cat.man  catalog.man  cd.man  cls.man  connect.man  copy.man  cp.man  date.man  df.man  diff.man  dir.man  do.man  echo.man  exit.man  format.man  get.man  grep.man  head.man  help.man  hex.man  jump.man  krusader.man  krusaderw.man  loadmem.man  man.man  mkdir.man  mount.man  mv.man  news.man  nuke.man  picorbt.man  ping.man  put.man  pwd.man  rlist.man  rm-fr.man  (+13 more)
6502/ca65/commands/: Makefile  bench.s  ping.s  transient.cfg  transient.inc
6502/ca65/common/: math.inc  pico_def.inc  pico_lib.s
6502/ca65/shell/: cmd_shell.mon  cmd_shell.s
docs/: github_cheat_sheet.md  transient_commands.txt
emmulator/EATERSD10/: create.py  doit.sh
emmulator/EATERSD10/four-bit-mode-msbasic/: Krusader_1.3_65C02.asm  Krusader_1.3_65C02.asm_B4_Nice  bios.s  cmd_shell.s  defines_eater.s  eater.cfg  eater2.cfg  init.s  sound.s  token.s  wozmon.s  zeropage.s
emmulator/EATERSD10X/: doit.sh  doit_no_cmake.sh
emmulator/EATERSD10X/four-bit-mode-msbasic/: Krusader_1.3_65C02.asm  bios.s  eater.cfg  init.s  make.sh  make.sh_old  sound.sxxx  (+2 more)
emmulator/EMULATOR/: CMakeLists.txt  README.md
include/: bus.h  lwipopts.h  w25q64.h
src/: bus.c  cmd_defs.h  main.c  via_handshake.pio  w25q64.c
tools/: cleanup.py  file_server.py  grep_for.txt  pkg_builder.py  tree.txt  upper.py  upper.sh
tools/utilities/: bintomon.py
(+44 files in other folders)
